Fix MSMP Was Impossible To Connect For Remote Hosts.